fix: material logo is distorted

--- a/packages/iceworks-client/src/pages/Material/components/SubMenu/index.module.scss
+++ b/packages/iceworks-client/src/pages/Material/components/SubMenu/index.module.scss
@@ -24,6 +24,7 @@
     overflow: hidden;
 
     > img {
+      object-fit: contain;
       width: 100%;
       height: 100%;
     }
